--- a/web/static/css/order.css
+++ b/web/static/css/order.css
@@ -11,7 +11,7 @@ select.form-control:not([size]):not([multiple]) {
     height: 44px;
 }
 .mainOder{
-    padding-top: 200px;
+    padding-top: 30px;
 }
 .mb-1{
     padding-bottom: 60px;
@@ -261,3 +261,10 @@ h2{
     height: 36px;
 }
 
+.table th{
+    background: aliceblue;
+}
+
+.table td{
+    background: white;
+}
