fic ui header cho tất cả các trang

--- a/web/static/css/compareCage.css
+++ b/web/static/css/compareCage.css
@@ -8,7 +8,7 @@ body{
 h2{
     text-align: center;
     color: black;
-    padding: 20px 0px;
+    padding: 200px 0px 20px 0px;
 }
 
 .info__Cage1, .info__Cage2{
