--- a/web/static/css/SuccessOrder.css
+++ b/web/static/css/SuccessOrder.css
@@ -6,7 +6,8 @@
     justify-content: center;
     height: 80vh;
     margin: 0;
-    padding-top: 200px;
+    padding-top: 280px;
+    padding-bottom: 50px;
 }
 
 .logo__success i {
