--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -460,7 +460,7 @@ ol {
 
 .header__menu ul li a {
     text-decoration: none;
-    font-size: 14px;
+    font-size: 16px;
     color: #252525;
     text-transform: capitalize;
     font-weight: 700;
@@ -792,7 +792,8 @@ ol {
   Featured
 -----------------------*/
 .mainExcept{
-    padding-top: 200px;
+    padding-top: 100px;
+    padding-bottom: 40px;
 }
 .featured {
     padding-top: 100px;
@@ -1280,4 +1281,8 @@ filter__but{
 }
 .filter__but button{
     padding: 10px 20px;
+}
+
+.head__aaa{
+    text-align: right;
 }
