--- a/web/static/css/orderRequest.css
+++ b/web/static/css/orderRequest.css
@@ -1,5 +1,5 @@
 .main {
-    background: #F0F6DC;
+    background: #F7F7F7;
     font-family: "Arial", sans-serif;
     padding: 200px 50px 50px 50px;
 }
@@ -18,9 +18,11 @@
 }
 
 .add-material {
-    background: #f5f5f5;
+    background: white;
     padding: 20px;
     margin-top: 20px;
+        border-radius: 12px;
+
 }
 
 .form-title {
