--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -26,7 +26,7 @@ html,
 body {
     height: 100%;
     font-family: Arial, sans-serif;
-    background: #F7F7F7;
+    background: #f7f7f7;
 }
 .header{
     position: fixed;
