fix lỗi checkout để trống thông tin + button detail ở detail order

--- a/web/static/css/checkout.css
+++ b/web/static/css/checkout.css
@@ -287,3 +287,9 @@ h5 {
 .mainCheckout{
     padding-top: 200px;
 }
+
+.error_message{
+    text-align: center;
+    color: red;
+    padding-top: 10px;
+}
