--- a/web/static/css/compareCage.css
+++ b/web/static/css/compareCage.css
@@ -64,14 +64,24 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 3px;
+    font-size: 18px;
+    padding: 5px 5px;
 }
-
+.rate-avg{
+    margin: 0px 5px;
+}
 /* Style for the star rating */
-.star-rating {
+.starD {
+    color: yellow;
     font-size: 20px;
-    color: gold;
 }
 
+.count__feed{
+    border-left: 1px solid gray;
+    margin: 0px 10px;
+    padding: 0px 10px;
+}
 
 /*material*/
 .mate__Cage1 h4,
