--- a/web/static/css/updateUser.css
+++ b/web/static/css/updateUser.css
@@ -137,7 +137,7 @@ td {
 }
 
 /* Style input fields */
-input[type="text"] {
+input[type="text"], input[type="email"] {
     width: 90%;
     padding: 7px;
     margin-bottom: 0px;
